# allocdb

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.githooks/: pre-push
.github/: pull_request_template.md
crates/allocdb-core/: Cargo.toml
crates/allocdb-core/src/: command.rs  command_codec.rs  config.rs  fixed_map.rs  ids.rs  lib.rs  recovery.rs  recovery_issue_30_tests.rs  recovery_issue_31_tests.rs  recovery_revoke_tests.rs  recovery_tests.rs  result.rs  snapshot.rs  snapshot_codec.rs  snapshot_cursor.rs  snapshot_file.rs  snapshot_issue_30_tests.rs  snapshot_tests.rs  state_machine.rs  state_machine_apply.rs  state_machine_bundle.rs  state_machine_bundle_fencing_tests.rs  state_machine_bundle_overflow_tests.rs  state_machine_bundle_tests.rs  state_machine_execution.rs  state_machine_fencing_tests.rs  state_machine_invariants.rs  state_machine_issue_31_tests.rs  state_machine_issue_32_tests.rs  state_machine_issue_33_tests.rs  state_machine_members.rs  state_machine_metrics.rs  state_machine_observe_tests.rs  state_machine_reservation_invariants.rs  state_machine_retire.rs  state_machine_revoke_apply.rs  state_machine_revoke_tests.rs  state_machine_slots.rs  state_machine_tests.rs  wal.rs  (+1 more)
crates/quota-core/: Cargo.toml
crates/quota-core/src/: bounded_queue.rs  command.rs  command_codec.rs  config.rs  fixed_map.rs  ids.rs  lib.rs  recovery.rs  result.rs  retire_queue.rs  snapshot.rs  snapshot_file.rs  state_machine.rs  wal.rs  wal_file.rs
docs/: README.md  api.md  architecture.md  design.md  (+35 more)
(+72 files in other folders)
