[workspace]
members = [
    "crates/allocdb-bench",
    "crates/allocdb-core",
    "crates/allocdb-node",
    "crates/quota-core",
    "crates/reservation-core",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
