[package]
name = "allocdb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
allocdb-retire-queue = { path = "../allocdb-retire-queue" }
allocdb-wal-frame = { path = "../allocdb-wal-frame" }
crc32c = "0.6.8"
log = "0.4.28"

[lints]
workspace = true
